<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.DetailsActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorWarning"
        android:textSize="@dimen/dimenMediumText"
        android:textStyle="bold"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dimenStandardMargin">
            <ImageView
                android:id="@+id/ivBackdropImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="150dp"
                android:layout_margin="@dimen/dimenStandardMargin"
                android:contentDescription="@string/backdrop_description" />

            <TextView
                style="@style/styleDetailsTitle"
                android:text="@string/title"/>
            <TextView
                android:id="@+id/tvTitle"
                style="@style/styleDetailsContent"/>

            <TextView
                style="@style/styleDetailsTitle"
                android:text="@string/release"/>
            <TextView
                android:id="@+id/tvRelease"
                style="@style/styleDetailsContent"/>

            <TextView
                style="@style/styleDetailsTitle"
                android:text="@string/genre"/>
            <TextView
                android:id="@+id/tvGenre"
                style="@style/styleDetailsContent"/>

            <TextView
                style="@style/styleDetailsTitle"
                android:text="@string/overview"/>
            <TextView
                android:id="@+id/tvOverview"
                style="@style/styleDetailsContent"/>

            <ImageView
                android:id="@+id/ivPosterImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:layout_margin="@dimen/dimenStandardMargin"
                android:contentDescription="@string/poster_description" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
